cgrates (0.11) UNRELEASED; urgency=medium

  [ Alexandru Tripon ]
  * [FilterS] Renamed rals_conns to apiers_conns
  * [FilterS] Updated *destination filter to get ReverseDestination form
    API
  * [SessionS] Added check for missing CGRevent
  * [SessionS] Add *cost flag for SessionSv1.ProcessEvent to calculate
    the rater cost
  * [ConnManager] Added ApierSv2 as internal connection channel instead of ApierSv1 
  * [DiameterAgent] Using String function from diam.Message instead of
    ToJSON for request String method

  [ Voivozeanu Teofil ]
  * [AgentRequest] Add support for *group type and correctly overwrite
    the values in case of *variable
  * [EventReader] Correctly populate ConcurrentRequest from config in
    EventReader

 -- Alexandru Tripon <alexandru.tripon@itsyscom.com>  Tue, 18 Feb 2020 08:24:39 +0200